--- a/index.html
+++ b/index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <h1>Daniyar</h1>
+    <p style="color: blue; background-color: brown">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda
+      pariatur nam illo fuga ratione ipsum molestiae beatae similique maxime.
+      Quia dolores nesciunt iure numquam assumenda minus repellendus sint
+      aliquam explicabo. Lorem ipsum dolor sit, amet consectetur adipisicing
+      elit. Repellat magni amet molestias placeat! Delectus earum minima quasi
+      tenetur voluptatibus tempore sapiente libero? Molestias accusamus, non
+      ducimus vero illum rem repudiandae. Lorem ipsum dolor, sit amet
+      consectetur adipisicing elit. Aut perferendis assumenda corporis dolore
+      totam, vitae officiis facere veritatis veniam! Molestias odio assumenda
+      rerum asperiores libero ad quod laboriosam autem vitae.
+    </p>
+  </body>
 </html>
